fix: 🐛 table divider z-index & color

--- a/stylus/components/table.styl
+++ b/stylus/components/table.styl
@@ -1,5 +1,6 @@
 @require '../settings/breakpoints'
 @require '../settings/palette'
+@require '../settings/z-index'
 @require '../tools/mixins'
 
 $table
@@ -93,22 +94,14 @@ $table-cell--primary
 
 $table-divider
     position sticky
+    z-index $low-index
     top 0
-    background-color white
+    background-color zircon
     text-indent rem(32)
     font-weight bold
     font-size rem(12)
     line-height 1.33
     color coolGrey
-
-    &::before
-        content ''
-        position absolute
-        top 0
-        left 0
-        width 100%
-        height 100%
-        background-color zircon
 
     & + * // @stylint ignore
         border-top 0
